--- a/src/app/Components/QuemSomos/QuemSomos.module.css
+++ b/src/app/Components/QuemSomos/QuemSomos.module.css
@@ -26,6 +26,11 @@
     padding: 30px 0px;
 }
 
+.historia iframe {
+    width: 100%;
+    height: 100%;
+}
+
 .Certificacao {
     display: flex;
     flex-direction: column;
